--- a/d4mn-ascii-blackjack/nbproject/project.properties
+++ b/d4mn-ascii-blackjack/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=d4mn.ascii.blackjack.D4mnAsciiBlackjack
+main.class=D4mnAsciiBlackjack
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
